parser.h: added link transform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,13 @@ project(Adidas)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# Libcurl library
 set(CURL_LIBRARY "-lcurl")
 find_package(CURL REQUIRED)
-add_executable(Adidas main.cpp)
 include_directories(${CURL_INCLUDE_DIR})
+
+add_executable(Adidas main.cpp User.cpp User.h parser.h)
+
 target_link_libraries(Adidas ${CURL_LIBRARIES})
+
 
